Se cambia estilos pagina de inicio

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1411,4 +1411,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 input[type=number] { -moz-appearance:textfield; }
 
-.a-menu:hover { text-decoration: underline 2px saddlebrown solid; }
+.a-menu:hover { text-decoration: underline 1px saddlebrown solid; }
+
+.vendido01{
+  background-image: url('../img/productos/vendido01.png');;
+}
