--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ body.menu-opened {
 }
 
 .info-nav{
-  background-color: #efeae7;
+  background-color: #fff;
 }
 
 .info-nav ul.menu-right{
@@ -65,8 +65,8 @@ a.icon-shopping, a.icon-search{
 }
 
 a.icon-shopping a img, .menu-right a img{
-  width: 40px;
-  padding-bottom: 10px;
+  width: 30px;
+  padding-bottom: 0px;
 }
 
 .modal{
@@ -138,8 +138,8 @@ a.btn-more:after {
   width: 100px!important;
 }
 .icon-search img{
-  width: 40px!important;
-  margin: 10px 0px 0px 0px;
+  width: 30px!important;
+  /* margin: 10px 0px 0px 0px; */
 }
 #site-header {
   position: relative;
