Se agregan detalles de diseño

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -276,7 +276,7 @@ a.btn-more:after {
   height: 100%;
   top: 0px;
   left: 0px;
-  background-color: #666666;
+  background-color: #EFEAE7;
   z-index: 15;
   opacity: 0;
   visibility: hidden;
