Se agregan detalles de diseño

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -607,7 +607,7 @@ a.btn-more:after {
 
 /* star section-prodcuto */
 .section-productos{
-  padding: 0 0 5% 0;
+  padding: 0 0 0 0;
 }
 
 .section-productos .producto img{
