--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1376,7 +1376,19 @@ ul.menu-details li a.activo::after{
   color: #B97232 !important;
   font-size: 25px;
 }
+.txt-cafe{
+  font-family: 'Playfair Display', serif;
+  color: #B97232 !important;
+  font-size: 25px;
+}
 
+.text-pink{
+  color: #E6C8BD;
+}
+
+.texto-precio{
+  font-family: 'Poppins', serif;
+}
 .textos-pagos{
   color: #B97232 !important;
   font-size: 14px;
