--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1388,6 +1388,7 @@ ul.menu-details li a.activo::after{
 
 .texto-precio{
   font-family: 'Poppins', serif;
+  font-size: 22px;
 }
 .textos-pagos{
   color: #B97232 !important;
