--- a/public/css/style.css
+++ b/public/css/style.css
@@ -890,9 +890,6 @@ a.btn-more:after {
   transform: translate(-50%, -50%);
   font-size: 15px;
   display: none;
-  background-color: #d1baba;
-  color: white;
-  font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   border: 0;
   transition: 5seg;
@@ -1468,6 +1465,12 @@ ul.menu-details li a.activo::after{
   #img-vision{
     display: none;
   }
+  #img-vision{
+    display: none;
+  }
+  #divTienda{
+    display: none;
+  }
 }
 
 .btn-cafe{
@@ -1481,12 +1484,12 @@ ul.menu-details li a.activo::after{
 }
 .btn-pink{
   background-color: #E6C8BD !important;
-  color: white;
-  font-size: 14px;
-  font-family: 'Poppins';
-  padding: 5px 30px;
+  color: white !important;
+  font-size: 14px !important;
+  font-family: 'Poppins' !important;
+  padding: 5px 30px !important;
   border: #E6C8BD !important;
-  border-radius: 40px;
+  border-radius: 40px !important;
 }
 
 .img-icons {
