Se agrega validacion de compra con inicio de sesion y guardado, tambien se agrega tablas users necesarias para guardad el usuario

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1529,3 +1529,9 @@ input[type=number] { -moz-appearance:textfield; }
   text-decoration: underline;
 }
 
+.sesion{
+  padding: 0;
+}
+a{
+  color: #bd7b3e !important;
+}
